# parasight

./: .env.example  README.md  context_1  context_small  main.py  pyproject.toml  test_env.py
specs/: ideas.md
src/parasight/: main.py
src/parasight/helpers/: omni_parser_client.py
src/parasight/special_agents/: __init__.py  screenshot_agent.py  ui_test_agent.py
src/parasight/special_tools/: __init__.py  analyze_image_with_omniparser_tool.py  extract_text_tool.py  find_elements_tool.py  interact_with_element_tool.py  omniparser_models.py  take_screenshot.py  take_screenshot_tool.py  test_tools.py  validate_element_exists_tool.py
